--- a/ResNet_DenseNet_Model/Densenet_New/densenet_mixed.ipynb
+++ b/ResNet_DenseNet_Model/Densenet_New/densenet_mixed.ipynb
@@ -1,10 +1,6 @@
 {
  "cells": [
   {
-<<<<<<< HEAD
-   "attachments": {},
-=======
->>>>>>> 8ba745979043ba59dd6bb26f4e97e1775a9f60e0
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -13,10 +9,6 @@
    ]
   },
   {
-<<<<<<< HEAD
-   "attachments": {},
-=======
->>>>>>> 8ba745979043ba59dd6bb26f4e97e1775a9f60e0
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -25,9 +17,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 13,
-=======
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
@@ -49,7 +38,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
->>>>>>> 8ba745979043ba59dd6bb26f4e97e1775a9f60e0
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,40 +63,12 @@
     "from sklearn.metrics import cohen_kappa_score, accuracy_score\n",
     "\n",
     "from keras import layers\n",
-<<<<<<< HEAD
-    "from keras.applications import DenseNet201\n",
-=======
     "from tensorflow.keras.applications import DenseNet201\n",
->>>>>>> 8ba745979043ba59dd6bb26f4e97e1775a9f60e0
     "from keras.callbacks import Callback, ModelCheckpoint, ReduceLROnPlateau, TensorBoard\n",
     "from keras.preprocessing.image import ImageDataGenerator\n",
     "from keras.utils.np_utils import to_categorical\n",
     "from keras.models import Sequential\n",
-<<<<<<< HEAD
-    "from keras.optimizers import Adam"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import json\n",
-    "import utils_nn_eval\n",
-    "import random\n",
-    "import gc\n",
-    "import pandas\n",
-    "import matplotlib.pyplot as plt\n",
-    "from tqdm import tqdm\n",
-    "\n",
-    "from keras import backend as K\n",
-    "from keras.callbacks import Callback, ModelCheckpoint, ReduceLROnPlateau, TensorBoard\n",
-    "from sklearn.metrics import cohen_kappa_score, accuracy_score"
-=======
     "from tensorflow.keras.optimizers import Adam"
->>>>>>> 8ba745979043ba59dd6bb26f4e97e1775a9f60e0
    ]
   },
   {
@@ -117,18 +77,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-<<<<<<< HEAD
-    "figure_path = 'D:/Medical_Imaging/Medical_Imaging_Elias/Figures/'"
-   ]
-  },
-  {
-   "attachments": {},
-=======
     "figure_path = 'D:/FH/Kurse/semester_3/medical_imaging/Medical_Imaging_Elias/Figures/'"
    ]
   },
   {
->>>>>>> 8ba745979043ba59dd6bb26f4e97e1775a9f60e0
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -136,10 +88,6 @@
    ]
   },
   {
-<<<<<<< HEAD
-   "attachments": {},
-=======
->>>>>>> 8ba745979043ba59dd6bb26f4e97e1775a9f60e0
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -148,11 +96,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 16,
-=======
    "execution_count": 4,
->>>>>>> 8ba745979043ba59dd6bb26f4e97e1775a9f60e0
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,11 +106,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 17,
-=======
    "execution_count": 5,
->>>>>>> 8ba745979043ba59dd6bb26f4e97e1775a9f60e0
    "metadata": {},
    "outputs": [
     {
@@ -184,10 +124,6 @@
    ]
   },
   {
-<<<<<<< HEAD
-   "attachments": {},
-=======
->>>>>>> 8ba745979043ba59dd6bb26f4e97e1775a9f60e0
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -196,11 +132,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 18,
-=======
    "execution_count": 6,
->>>>>>> 8ba745979043ba59dd6bb26f4e97e1775a9f60e0
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,11 +142,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 19,
-=======
    "execution_count": 7,
->>>>>>> 8ba745979043ba59dd6bb26f4e97e1775a9f60e0
    "metadata": {},
    "outputs": [
     {
@@ -233,11 +161,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 20,
-=======
    "execution_count": 8,
->>>>>>> 8ba745979043ba59dd6bb26f4e97e1775a9f60e0
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,11 +173,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 27,
-=======
    "execution_count": 9,
->>>>>>> 8ba745979043ba59dd6bb26f4e97e1775a9f60e0
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,11 +185,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 28,
-=======
    "execution_count": 10,
->>>>>>> 8ba745979043ba59dd6bb26f4e97e1775a9f60e0
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,11 +195,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 30,
-=======
    "execution_count": 11,
->>>>>>> 8ba745979043ba59dd6bb26f4e97e1775a9f60e0
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,10 +204,6 @@
    ]
   },
   {
-<<<<<<< HEAD
-   "attachments": {},
-=======
->>>>>>> 8ba745979043ba59dd6bb26f4e97e1775a9f60e0
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -304,11 +212,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 7,
-=======
    "execution_count": 12,
->>>>>>> 8ba745979043ba59dd6bb26f4e97e1775a9f60e0
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,10 +220,6 @@
    ]
   },
   {
-<<<<<<< HEAD
-   "attachments": {},
-=======
->>>>>>> 8ba745979043ba59dd6bb26f4e97e1775a9f60e0
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -328,11 +228,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 9,
-=======
    "execution_count": 13,
->>>>>>> 8ba745979043ba59dd6bb26f4e97e1775a9f60e0
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,10 +236,6 @@
    ]
   },
   {
-<<<<<<< HEAD
-   "attachments": {},
-=======
->>>>>>> 8ba745979043ba59dd6bb26f4e97e1775a9f60e0
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -352,11 +244,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 10,
-=======
    "execution_count": 14,
->>>>>>> 8ba745979043ba59dd6bb26f4e97e1775a9f60e0
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,11 +269,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 11,
-=======
    "execution_count": 15,
->>>>>>> 8ba745979043ba59dd6bb26f4e97e1775a9f60e0
    "metadata": {},
    "outputs": [
     {
@@ -394,22 +278,6 @@
      "text": [
       "Model: \"sequential\"\n",
       "_________________________________________________________________\n",
-<<<<<<< HEAD
-      " Layer (type)                Output Shape              Param #   \n",
-      "=================================================================\n",
-      " densenet201 (Functional)    (None, 4, 4, 1920)        18321984  \n",
-      "                                                                 \n",
-      " global_average_pooling2d (G  (None, 1920)             0         \n",
-      " lobalAveragePooling2D)                                          \n",
-      "                                                                 \n",
-      " dropout (Dropout)           (None, 1920)              0         \n",
-      "                                                                 \n",
-      " batch_normalization (BatchN  (None, 1920)             7680      \n",
-      " ormalization)                                                   \n",
-      "                                                                 \n",
-      " dense (Dense)               (None, 2)                 3842      \n",
-      "                                                                 \n",
-=======
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
       "densenet201 (Functional)     (None, 4, 4, 1920)        18321984  \n",
@@ -421,7 +289,6 @@
       "batch_normalization (BatchNo (None, 1920)              7680      \n",
       "_________________________________________________________________\n",
       "dense (Dense)                (None, 2)                 3842      \n",
->>>>>>> 8ba745979043ba59dd6bb26f4e97e1775a9f60e0
       "=================================================================\n",
       "Total params: 18,333,506\n",
       "Trainable params: 18,100,610\n",
@@ -447,10 +314,6 @@
    ]
   },
   {
-<<<<<<< HEAD
-   "attachments": {},
-=======
->>>>>>> 8ba745979043ba59dd6bb26f4e97e1775a9f60e0
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -459,11 +322,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 12,
-=======
    "execution_count": 16,
->>>>>>> 8ba745979043ba59dd6bb26f4e97e1775a9f60e0
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,35 +337,13 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 14,
-=======
    "execution_count": 17,
->>>>>>> 8ba745979043ba59dd6bb26f4e97e1775a9f60e0
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-<<<<<<< HEAD
-      "Epoch 1/4\n",
-      "21/20 [==============================] - ETA: 0s - loss: 0.5591 - accuracy: 0.7305\n",
-      "Epoch 1: val_accuracy improved from 0.57143 to 0.69048, saving model to densenet_original_local.hdf5\n",
-      "20/20 [==============================] - 92s 4s/step - loss: 0.5591 - accuracy: 0.7305 - val_loss: 0.5549 - val_accuracy: 0.6905 - lr: 1.0000e-04\n",
-      "Epoch 2/4\n",
-      "21/20 [==============================] - ETA: 0s - loss: 0.5498 - accuracy: 0.7365\n",
-      "Epoch 2: val_accuracy improved from 0.69048 to 0.72619, saving model to densenet_original_local.hdf5\n",
-      "20/20 [==============================] - 73s 4s/step - loss: 0.5498 - accuracy: 0.7365 - val_loss: 0.5364 - val_accuracy: 0.7262 - lr: 1.0000e-04\n",
-      "Epoch 3/4\n",
-      "21/20 [==============================] - ETA: 0s - loss: 0.5259 - accuracy: 0.7485\n",
-      "Epoch 3: val_accuracy improved from 0.72619 to 0.75000, saving model to densenet_original_local.hdf5\n",
-      "20/20 [==============================] - 73s 4s/step - loss: 0.5259 - accuracy: 0.7485 - val_loss: 0.4883 - val_accuracy: 0.7500 - lr: 1.0000e-04\n",
-      "Epoch 4/4\n",
-      "21/20 [==============================] - ETA: 0s - loss: 0.5111 - accuracy: 0.7695\n",
-      "Epoch 4: val_accuracy did not improve from 0.75000\n",
-      "20/20 [==============================] - 55s 3s/step - loss: 0.5111 - accuracy: 0.7695 - val_loss: 0.9690 - val_accuracy: 0.6667 - lr: 1.0000e-04\n"
-=======
       "Epoch 1/50\n",
       "24/24 [==============================] - 51s 1s/step - loss: 0.6285 - accuracy: 0.6693 - val_loss: 0.7769 - val_accuracy: 0.5208\n",
       "\n",
@@ -717,7 +554,6 @@
       "24/24 [==============================] - 30s 1s/step - loss: 0.1042 - accuracy: 0.9661 - val_loss: 0.1159 - val_accuracy: 0.9688\n",
       "\n",
       "Epoch 00050: val_accuracy did not improve from 0.96875\n"
->>>>>>> 8ba745979043ba59dd6bb26f4e97e1775a9f60e0
      ]
     }
    ],
@@ -734,23 +570,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-<<<<<<< HEAD
-    "with open('history_mixed.json', 'w') as f:\n",
-=======
-    "with open('D:\\FH\\Kurse\\semester_3\\medical_imaging\\repos\\Medical_Imaging_Elias\\ResNet_DenseNet_Model\\Densenet_Newhistory_mixed.json', 'w') as f:\n",
->>>>>>> 8ba745979043ba59dd6bb26f4e97e1775a9f60e0
+    "with open(r'D:\\FH\\Kurse\\semester_3\\medical_imaging\\repos\\Medical_Imaging_Elias\\ResNet_DenseNet_Model\\Densenet_New\\history_mixed.json', 'w') as f:\n",
     "    \n",
     "    json.dump(str(history.history), f)"
    ]
   },
   {
-<<<<<<< HEAD
-   "attachments": {},
-=======
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
@@ -768,7 +597,6 @@
    ]
   },
   {
->>>>>>> 8ba745979043ba59dd6bb26f4e97e1775a9f60e0
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -787,50 +615,25 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10/10 [==============================] - 17s 1s/step\n"
-     ]
-    }
-   ],
-=======
    "execution_count": 18,
    "metadata": {},
    "outputs": [],
->>>>>>> 8ba745979043ba59dd6bb26f4e97e1775a9f60e0
    "source": [
     "Y_val_pred = model.predict(x_val)"
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 32,
-=======
    "execution_count": 19,
->>>>>>> 8ba745979043ba59dd6bb26f4e97e1775a9f60e0
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-<<<<<<< HEAD
-       "0.796875"
-      ]
-     },
-     "execution_count": 32,
-=======
        "0.96875"
       ]
      },
      "execution_count": 19,
->>>>>>> 8ba745979043ba59dd6bb26f4e97e1775a9f60e0
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -838,8 +641,6 @@
    "source": [
     "accuracy_score(np.argmax(y_val, axis=1), np.argmax(Y_val_pred, axis=1))"
    ]
-<<<<<<< HEAD
-=======
   },
   {
    "cell_type": "code",
@@ -883,16 +684,11 @@
    "metadata": {},
    "outputs": [],
    "source": []
->>>>>>> 8ba745979043ba59dd6bb26f4e97e1775a9f60e0
   }
  ],
  "metadata": {
   "kernelspec": {
-<<<<<<< HEAD
-   "display_name": "Python 3",
-=======
    "display_name": "Python 3 (ipykernel)",
->>>>>>> 8ba745979043ba59dd6bb26f4e97e1775a9f60e0
    "language": "python",
    "name": "python3"
   },
@@ -906,14 +702,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-<<<<<<< HEAD
-   "version": "3.10.1"
+   "version": "3.10.1 (tags/v3.10.1:2cd268a, Dec  6 2021, 19:10:37) [MSC v.1929 64 bit (AMD64)]"
   },
-  "orig_nbformat": 4,
-=======
-   "version": "3.9.12"
-  },
->>>>>>> 8ba745979043ba59dd6bb26f4e97e1775a9f60e0
   "vscode": {
    "interpreter": {
     "hash": "3fc63de107a3995f66d33859f380f73bd26ac40da4b187ce627a4472b1acbfe0"
@@ -921,9 +711,5 @@
   }
  },
  "nbformat": 4,
-<<<<<<< HEAD
- "nbformat_minor": 2
-=======
  "nbformat_minor": 4
->>>>>>> 8ba745979043ba59dd6bb26f4e97e1775a9f60e0
 }
